--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Configure Poetry
         run: |
-          poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
+          # poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
           poetry config repositories.testpypi https://test.pypi.org/simple/
           poetry config pypi-token.testpypi ${{ secrets.TEST_PYPI_API_TOKEN }}
 
