fix script path.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         
       - name: Update version
         run: |
-          python update_version.py
+          python .github/workflows/update_version.py
 
       - name: Configure Poetry
         run: |
