--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Configure Poetry
         run: |
-          export POETRY_PYPI_TOKEN_PYPI=$PYPI_TOKEN
-          export POETRY_PYPI_TOKEN_TESTPYPI=$TEST_PYPI_TOKEN
+          export POETRY_PYPI_TOKEN_pypi=$PYPI_TOKEN
+          export POETRY_PYPI_TOKEN_testpypi=$TEST_PYPI_TOKEN
           poetry config repositories.testpypi https://test.pypi.org/legacy/
 
       - name: Build package
