--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,8 +29,6 @@ jobs:
 
       - name: Configure Poetry
         run: |
-          export POETRY_PYPI_TOKEN_pypi=$PYPI_TOKEN
-          export POETRY_PYPI_TOKEN_testpypi=$TEST_PYPI_API_TOKEN
           poetry config repositories.testpypi https://test.pypi.org/legacy/
 
       - name: Build package
@@ -38,10 +36,9 @@ jobs:
 
       - name: Publish to TestPyPI
         run: |
-          export POETRY_PYPI_TOKEN_testpypi=$TEST_PYPI_API_TOKEN
-          poetry publish -r testpypi
+          poetry config repositories.testpypi https://test.pypi.org/legacy/
+          poetry publish -r testpypi -u __token__ -p ${{ secrets.TEST_PYPI_API_TOKEN }}
 
       - name: Publish to PyPI
         run: |
-          export POETRY_PYPI_TOKEN_pypi=$PYPI_TOKEN
-          poetry publish
+          poetry publish -u __token__ -p ${{ secrets.PYPI_TOKEN }}
