add checks to skip workflow if no relevant files are changed.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main  # Runs on every commit to main branch
+    paths:
+      - 'ra_catbit/'
+      - 'README.md'
+      - 'pyproject.toml'
 
 jobs:
   publish:
