--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main  # Runs on every commit to main branch
     paths:
-      - 'ra_catbit/'
+      - 'ra_catbit/**'
       - 'README.md'
       - 'pyproject.toml'
 
